--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    font: inherit; /* Desconsiderar todas as fontes que estão no projeto. */
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 :root {
@@ -17,17 +26,63 @@
     --text-color-secondary: #A1A1AA;
     --text-color-primary: #F4F4F5;
 
-    --font-family: 'Inter', sans-serif;
+    --font-family: 'Inter', system-ui, sans-serif;
 
-    --desk-h1: 800 4rem/120% var(--font-family);
-    --desk-h2: 800 3rem/120% var(--font-family);
-    --desk-h3: 800 2rem/120% var(--font-family);
-    --desk-span: 500 0.875rem/100% var(--font-family);
-    --desk-paragraph: 400 1rem/160% var(--font-family);
+    --font-weight-base: 400;
+    --font-weight-md: 500;
+    --font-weight-bold: 800;
 
-    --mobile-h1: 800 2.5rem/120% var(--font-family);
-    --mobile-h2: 800 1.5rem/120% var(--font-family);
-    --mobile-h3: 800 1.25rem/120% var(--font-family);
-    --mobile-span: 500 0.875rem/100% var(--font-family);
-    --mobile-paragraph: 400 1rem/160% var(--font-family);
+    --font-size-sm: 0.875rem;
+    --font-size-base: 1rem;
+    --font-size-lg: 1.25rem;
+    --font-size-xl: 1.5rem;
+    --font-size-2xl: 2.5rem;
+}
+
+html {
+    font-family: var(--font-family);
+    font-weight: var(--font-weight-base);
+    font-size: var(--font-size-base);
+    line-height: 1.6;
+    color: var(--text-color-primary);
+}
+
+body {
+    background-color: var(--background-color);
+}
+
+h1, h2, h3 {
+    line-height: 1.2;
+    color: var(--text-color-primary);
+    font-weight: var(--font-weight-bold);
+    letter-spacing: -0.04em;
+}
+
+h1 {
+    font-size: var(--font-size-2xl);
+}
+
+h2 {
+    font-size: var(--font-size-xl);
+}
+
+h3 {
+    font-size: var(--font-size-lg);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul[role="list"] {
+    list-style: none;
+}
+
+@media (width >= 80em) { /* Declaramos dessa forma para trazer a responsividade. O 80em equivale a 80 x 16px = 1.280px */
+    :root {    
+        --font-size-lg: 2rem;
+        --font-size-xl: 3rem;
+        --font-size-2xl: 4rem;
+    }
 }
