--- a/styles/utility.css
+++ b/styles/utility.css
@@ -11,12 +11,14 @@
 }
 
 .px-lg {
-    padding-inline: var(--px-lg);
+    padding-block: var(--px-lg);
 }
 
 .container {
     --max-width: 375px;
-    width: min(var(--max-width), 100% - var (--px-lg) * 2);
+    width: min(var(--max-width), 100% - var(--px-lg) * 2);
+    margin-inline: auto;
+    border: solid violet;
 }
 
 .desktop-only {
@@ -26,6 +28,18 @@
 .even-columns {
     display: grid;
     gap: 1rem;
+}
+
+.flex {
+    display: flex;
+}
+
+.gap-1 {
+    gap: 1rem;
+}
+
+.grid {
+    display: grid;
 }
 
 @media (width >= 80em) {
@@ -40,7 +54,5 @@
     .even-columns {
         grid-auto-flow: column;
         grid-auto-columns: 1fr;
-
-        gap: 1rem;
     }
 }
