--- a/styles/global.css
+++ b/styles/global.css
@@ -83,6 +83,14 @@ a {
     color: inherit;
 }
 
+a:hover {
+    background: var(--brand-gradient);
+
+    --web-kit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
 ul[role='list'] {
     list-style: none;
 }
