--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -16,12 +16,16 @@
     cursor: pointer;
 
     background: var(--btn-bg-color);
-    color: var(--btn-color);
 }
 
 .btn:hover {
     --btn-bg-color: var(--brand-gradient);
     --btn-color: var(--surface--color);
+
+    -web-kit-background-clip: initial;
+    background-clip: initial;
+
+    color: var(--btn-color);
 }
 
 .btn-sm {
@@ -37,7 +41,6 @@
 .btn-lg {
     padding: 1rem 2rem;
     font-size: 1.125rem;
-
 }
 
 .btn[aria-label] {
@@ -53,10 +56,23 @@
     &::after {
         content: attr(aria-label);
         background: var(--btn-bg-color);
-        --webkit-background-clip: text;
+        -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
         position: relative;
         z-index: 1;
+    }
+}
+
+@media (width >= 80em) {
+    
+    .btn-sm {
+        padding: .75rem 1.5rem;
+        font-size: var(--font-size-base);
+    }
+    
+    .btn-md {
+        padding: 1rem 2rem;
+        font-size: 1.125rem;
     }
 }
