--- a/styles/utility.css
+++ b/styles/utility.css
@@ -11,14 +11,13 @@
 }
 
 .px-lg {
-    padding-block: var(--px-lg);
+    padding-inline: var(--px-lg);
 }
 
 .container {
     --max-width: 375px;
     width: min(var(--max-width), 100% - var(--px-lg) * 2);
     margin-inline: auto;
-    border: solid violet;
 }
 
 .desktop-only {
@@ -34,8 +33,16 @@
     display: flex;
 }
 
+.items-center {
+    align-items: center;
+}
+
 .gap-1 {
     gap: 1rem;
+}
+
+.gap-15 {
+    gap: 1.5rem;
 }
 
 .grid {
