--- a/styles/global.css
+++ b/styles/global.css
@@ -95,6 +95,11 @@ ul[role='list'] {
     list-style: none;
 }
 
+img {
+    max-width: 100%;
+    display: inline-block;
+}
+
 @media (width >= 80em) { /* Declaramos dessa forma para trazer a responsividade. O 80em equivale a 80 x 16px = 1.280px */
     :root {    
         --font-size-lg: 2rem;
