--- a/styles/hero.css
+++ b/styles/hero.css
@@ -11,7 +11,7 @@
 
     & p {
         font: var(--font-weight-md) var(--font-size-lg) / 1.4 var(font-family);
-        color: var(--text-color-secundary);
+        color: var(--text-color-secondary);
         margin-top: .5rem;
     }
 
