--- a/styles/sections.css
+++ b/styles/sections.css
@@ -22,7 +22,7 @@ section {
 
     & p {
         margin-top: .5rem;
-        color: var(--text-color-secundary);
+        color: var(--text-color-secondary);
 
     }
 }
