--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -3,77 +3,73 @@
     --btn-color: var(--background-color);
     border: 0;
     background-color: transparent;
-
+  
     display: flex;
     align-items: center;
     justify-content: center;
     width: fit-content;
-
+  
     border-radius: 0.5rem;
-
+  
     font: var(--font-weight-md) var(--font-size-base) / 1.5rem var(--font-family);
-
+  
     cursor: pointer;
-
+  
     background: var(--btn-bg-color);
     color: var(--btn-color);
-}
-
-.btn:hover {
+  }
+  
+  .btn:hover {
     --btn-bg-color: var(--brand-gradient);
     --btn-color: var(--surface-color);
-
-    -web-kit-background-clip: initial;
+  
+    -webkit-background-clip: initial;
     background-clip: initial;
-
     color: var(--btn-color);
-}
-
-.btn-sm {
-    padding: .5rem 1rem;
-    font-size: var(--font-size-sm);
-}
-
-.btn-md {
-    padding: .75rem 1.5rem;
-    font-size: var(--font-size-base);
-}
-
-.btn-lg {
+  }
+  
+  .btn-sm {
+    padding: 0.5rem 1rem;
+    font-size: var(--fs-sm);
+  }
+  .btn-md {
+    padding: 0.75rem 1.5rem;
+    font-size: var(--fs-base);
+  }
+  .btn-lg {
     padding: 1rem 2rem;
     font-size: 1.125rem;
-}
-
-.btn[aria-label] {
+  }
+  
+  .btn[aria-label] {
     position: relative;
-
+  
     &::before {
-        content: "";
-        position: absolute;
-        border-radius: inherit;
-        inset: 1.5px;
-        background-color: var(--background-color);
+      content: '';
+      position: absolute;
+      border-radius: inherit;
+      inset: 1px;
+      background-color: var(--background-color);
     }
+  
     &::after {
-        content: attr(aria-label);
-        background: var(--btn-bg-color);
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
-        position: relative;
-        z-index: 1;
+      content: attr(aria-label);
+      background: var(--btn-bg-color);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      position: relative;
+      z-index: 1;
     }
-}
-
-@media (width >= 80em) {
-    
+  }
+  
+  @media (width >= 80em) {
     .btn-sm {
-        padding: .75rem 1.5rem;
-        font-size: var(--font-size-base);
+      padding: 0.75rem 1.5rem;
+      font-size: var(--fs-base);
     }
-    
     .btn-md {
-        padding: 1rem 2rem;
-        font-size: 1.125rem;
+      padding: 1rem 2rem;
+      font-size: 1.125rem;
     }
-}
+  }
