--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -34,8 +34,9 @@
   }
   .btn-md {
     padding: 0.75rem 1.5rem;
-    font-size: var(--fs-base);
+    font-size: var(--font-size-base);
   }
+
   .btn-lg {
     padding: 1rem 2rem;
     font-size: 1.125rem;
@@ -66,7 +67,7 @@
   @media (width >= 80em) {
     .btn-sm {
       padding: 0.75rem 1.5rem;
-      font-size: var(--fs-base);
+      font-size: var(--font-size-base);
     }
     .btn-md {
       padding: 1rem 2rem;
