--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -41,6 +41,53 @@
         var(--surface-color) 70%
       );
     }
+
+    & li {
+        color: var(--text-color-secondary);
+        background: url(../assets/icons/Check.svg) no-repeat;
+        padding-left: 2rem;
+    }
+
+    & ul + small {
+        display: block;
+        margin-top: 1.5rem;
+        font-size: 0.875rem;
+        color: var(--text-color-secondary);    
+    }
+
+    & .premium {
+        position: relative;
+
+        & .card {
+        padding: 4.5rem;
+            & > span {
+                position: absolute;
+                top: 0;
+                left: 0;
+
+                padding: 0.75rem 2rem;
+                background: var(--brand-gradient);
+
+                border-top-left-radius: 1.5rem;
+                border-bottom-right-radius: 1.5rem;
+
+                font: 600 var(font-size-sm) var(--font-family);
+                text-transform: uppercase;
+                letter-spacing: 0.08em;
+                color: var(--background-color);
+            }
+        }
+
+        padding: 2px;
+        &::before {
+            content: "";
+            background: var(--brand-gradient);
+            position: absolute;
+            inset: 0;
+            border-radius: 1.5rem;
+            z-index: -1;
+        }
+    }
   
     @media (width >= 80em) {
       --fs-price: 2.5rem;
@@ -48,6 +95,19 @@
       & header {
         max-width: 50rem;
         margin-inline: auto;
+      }
+
+      & .premium .card {
+        padding-bottom: 6rem;
+      }
+
+      .btn-md {
+        padding: 0.75rem 1.5rem;
+        font-size: var(--fs-base);
+      }
+
+      & .card:nth-child(3) .separator {
+        margin-block: 1.5rem;
       }
     }
   }
